Squashed commit of the following:     Merge branch 'release/log'     Merge branch 'upstream/master'     Merge branch 'Feat/refactor'     * create Object     * use stats     * keep itemId     * getInstance
    updateStats
    isNew and isDue
    trackFile card
    refactor
    LocationSwitch
    hide debug commands
    change save name
    close #26: Interval时间的展示
    close [FEAT] Interval时间的展示 open-spaced-repetition/obsidian-spaced-repetition-recall#26
    * add info
    * fix merge errors
    * update readme
    dummyDueDateForNewCard
    trackedNoteToDecks
    add test
    fix data load
    fix convert
    add info
    verifyItems
    fix revlog
    fix stats
    fix #21 review_state为0的情况
    del debug msg
    openfileButton

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
     "id": "obsidian-spaced-repetition-recall",
     "name": "Spaced Repetition Recall",
-    "version": "1.10.1.11",
+    "version": "1.10.5.1",
     "minAppVersion": "0.15.4",
     "description": "Fight the forgetting curve by reviewing flashcards & entire notes.",
     "author": "Newdea",
     "authorUrl": "https://github.com/Newdea",
+    "helpUrl": "https://github.com/open-spaced-repetition/obsidian-spaced-repetition-recall/blob/dev-master/docs/README_ZH.md",
     "isDesktopOnly": false,
     "fundingUrl": {
         "支付宝Alipay": "https://github.com/Newdea/newdea/blob/main/.github/funding/QR_alipay.png",
