--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,12 @@
     "compilerOptions": {
         "baseUrl": "./",
         "paths": {
-            "src/*": ["src/*"]
+            "src/*": [
+                "src/*"
+            ]
         },
+        "emitDecoratorMetadata": true, // optional, 使Reflect类可以添加或读取metadata
+        "experimentalDecorators": true, // required
         "inlineSourceMap": true,
         "inlineSources": true,
         "module": "ESNext",
@@ -13,10 +17,23 @@
         "moduleResolution": "node",
         "esModuleInterop": true,
         "importHelpers": true,
-        "lib": ["dom", "dom.Iterable", "scripthost", "ES5", "ES6", "ES7", "ES2021"],
+        "lib": [
+            "dom",
+            "dom.Iterable",
+            "scripthost",
+            "ES5",
+            "ES6",
+            "ES7",
+            "ES2021"
+        ],
         "jsx": "react",
         "jsxFactory": "h"
     },
-    "include": ["**/*.ts", "**/*.tsx"],
-    "files": ["node_modules/jest-expect-message/types/index.d.ts"]
+    "include": [
+        "**/*.ts",
+        "**/*.tsx"
+    ],
+    "files": [
+        "node_modules/jest-expect-message/types/index.d.ts"
+    ]
 }
