--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,7 +22,7 @@ jobs:
               with:
                   node-version: 16
                   cache: "npm"
-            - run: npm i
+            - run: pnpm i
 
             # - name: Eslint
             #   run: npm run lint
