--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,18 +17,21 @@ jobs:
             - uses: actions/checkout@v3
               with:
                   submodules: "true"
+            - name: Install Dependencies
+              run: npm install -g pnpm && pnpm install
+
             - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v3
+              uses: actions/setup-node@v4
               with:
-                  node-version: 16
-                  cache: "npm"
+                  node-version: "20.x"
+                  cache: "pnpm"
             - run: pnpm i
 
             # - name: Eslint
-            #   run: npm run lint
+            #   run: pnpm run lint
 
             - name: Run test
-              run: npm run test
+              run: pnpm run test
 
     pretty:
         needs: validate
