--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.8",
         "deepcopy": "^2.1.0",
-        "fsrs.js": "^1.1.0",
+        "fsrs.js": "1.1.0",
         "@types/jest": "^29.5.11",
         "@types/node": "^20.10.6",
         "@types/vhtml": "^2.2.9",
