--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -49,10 +49,11 @@ jobs:
             - name: Prettify code
               uses: creyD/prettier_action@v4.3
               with:
-                  prettier_version: 2.8.8
+                  prettier_version: ^3.1.1
                   # This part is also where you can pass other options, for example:
                   # prettier_options: --write *.ts *.json src test --ignore-path package-lock.json
-                  prettier_options: --write . --ignore-path package-lock.json
+                  # --config .prettierrc.json --ignore-path package-lock.json pnpm-lock.yaml
+                  prettier_options: --write .
 
     lint_and_test:
         needs: pretty
