--- a/package.json
+++ b/package.json
@@ -21,20 +21,19 @@
     "license": "MIT",
     "devDependencies": {
         "@popperjs/core": "^2.11.8",
-        "deepcopy": "^2.1.0",
-        "fsrs.js": "^1.2.1",
         "@types/jest": "^29.5.12",
-        "@types/node": "^20.11.24",
+        "@types/node": "^20.14.7",
         "@types/vhtml": "^2.2.9",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
-        "@wdio/cli": "^8.32.3",
-        "@wdio/local-runner": "^8.32.3",
-        "@wdio/mocha-framework": "^8.32.3",
-        "@wdio/spec-reporter": "^8.32.2",
+        "@wdio/cli": "^8.39.0",
+        "@wdio/local-runner": "^8.39.0",
+        "@wdio/mocha-framework": "^8.39.0",
+        "@wdio/spec-reporter": "^8.39.0",
         "auto-changelog": "^2.4.0",
         "builtin-modules": "^3.3.0",
         "chai": "^4.4.1",
+        "deepcopy": "^2.1.0",
         "esbuild": "~0.19.12",
         "eslint": "^8.57.0",
         "jest": "^29.7.0",
@@ -42,15 +41,16 @@
         "jest-expect-message": "^1.1.3",
         "moment": "^2.30.1",
         "obsidian": "^1.5.7",
-        "prettier": "^3.2.5",
-        "ts-jest": "^29.1.2",
+        "prettier": "^3.3.2",
+        "ts-fsrs": "^3.5.7",
+        "ts-jest": "^29.1.5",
         "tslib": "2.6.1",
         "typescript": "5.1.6",
         "vhtml": "^2.2.0",
         "wdio-chromedriver-service": "^8.1.1"
     },
     "dependencies": {
-        "chart.js": "^4.4.2",
+        "chart.js": "^4.4.3",
         "pagerank.js": "^1.0.2"
     },
     "packageManager": "^pnpm@8.15.4"
